.provarCaches/00D5f000005vwGkEAI/objects/rstk__sydatat__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sydatat</customHelpPage>
    <description>sydatat__c</description>
    <fields>
        <fullName>rstk__formula_seqno__c</fullName>
        <formula>VALUE( rstk__sydata_recordid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System-generated sequence number</inlineHelpText>
        <label>Formula Seq No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_acctgdateovr__c</fullName>
        <inlineHelpText>Used to override Accounting Date on Inventory Cost Transaction generated from the processing of this record</inlineHelpText>
        <label>Accounting Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_backgroundprocessing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, record will be processed using a scheduled background job - PeriodicBatch processor. If records are not processing, checked Apex Job Log. To restart, use Developer Console &gt; Execute Anonymous and enter 

rstk.PeriodicBatchProcessor.run();</inlineHelpText>
        <label>Background Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchresubmitcount__c</fullName>
        <label>HVPE - Batch Resubmit Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchsizeoverride__c</fullName>
        <label>Batch Size Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchsizeunits__c</fullName>
        <inlineHelpText>For Internal Code Use Only.</inlineHelpText>
        <label>Batch Size Units</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_concurrencykeys__c</fullName>
        <label>Concurrency Keys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_contato__c</fullName>
        <externalId>true</externalId>
        <label>Container Transaction ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_debugtrace__c</fullName>
        <label>HVPE - Debug Trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_docno__c</fullName>
        <inlineHelpText>Optional Document Number associated with this transaction.</inlineHelpText>
        <label>Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_errorstack__c</fullName>
        <inlineHelpText>Error Stack from error encountered in the attempt to process this record.</inlineHelpText>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_extmessage__c</fullName>
        <label>Extended Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fifoind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked (set to TRUE) if item is FIFO cost (only applicable to Purchased items in a Weighted Average Cost Division).</inlineHelpText>
        <label>Is Fifo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromavailind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The &quot;Available for Picking Indicator&quot; as set on the From Location record.</inlineHelpText>
        <label>From Available for Picking Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Transaction ID = INVDIVDIV (Division to Division Transfer), this is the Inventory Division being transferred from.</inlineHelpText>
        <label>From Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromiclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Location ID being transferred from, which can be used as an alternative to specifying the From Loc ID/From Loc No.</inlineHelpText>
        <label>From Inventory Item Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromloccomment__c</fullName>
        <inlineHelpText>When set, the value entered will be written to the Inventory Location record being transferred from.</inlineHelpText>
        <label>From Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Location ID (of the Inventory Location record) being transferred from.</inlineHelpText>
        <label>From Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlocnum__c</fullName>
        <inlineHelpText>The Inventory Location Number (of the Inventory Location record) being transferred from.</inlineHelpText>
        <label>From Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromloctype__c</fullName>
        <inlineHelpText>The Location Type of the From Location ID, and is set by the system.</inlineHelpText>
        <label>From Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlotno__c</fullName>
        <inlineHelpText>If the Inventory Item being transferred is lot-controlled, set to the Lot Number to be transferred.  Note that the lot must exist in the From Inventory Location defined.</inlineHelpText>
        <label>From Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project Number associated with the inventory being transferred from.</inlineHelpText>
        <label>From Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Transaction ID = INVSITESITE (Site to Site Transfer), this is the Inventory Site being transferred from.</inlineHelpText>
        <label>From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_frpjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Project Charge Code</description>
        <inlineHelpText>From Project Charge Code</inlineHelpText>
        <label>From Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>sydatats (From Project Charge Code)</relationshipLabel>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_iccontainer__c</fullName>
        <externalId>true</externalId>
        <label>Inventory Container ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Item being transferred.</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_icitemsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory By Serial Number</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_iclicplate__c</fullName>
        <inlineHelpText>When using &quot;License Plates&quot;, this is the License Plate being transferred from DRP Processing for a Planned Transfer transaction.</inlineHelpText>
        <label>License Plate ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_ictransreq__c</fullName>
        <inlineHelpText>When using DRP, this is the Record ID of the Planned Transfer record that was the source of this transaction.</inlineHelpText>
        <label>Planned Transfer Request</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_islot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked (set to TRUE) if Inventory Item being transferred is lot-controlled.</inlineHelpText>
        <label>Is Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_issrl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked (set to TRUE) if Inventory Item being transferred is serial-controlled.</inlineHelpText>
        <label>Is Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_itemno__c</fullName>
        <inlineHelpText>The Inventory Item being transferred.</inlineHelpText>
        <label>Itemno</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_message__c</fullName>
        <inlineHelpText>The error message recorded for failed transaction. Once condition is corrected, reset Processing Indicator to &quot;Ready&quot; so that another attempt is made to process this record. Note: It is no necessary to clear this error message upon a re-try.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_nextseqsydataidtoexec__c</fullName>
        <label>Sequential Execution - Next Sydata ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_pepublished__c</fullName>
        <label>HVPE - 1:PE Published time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_petriggered__c</fullName>
        <label>HVPE - 2:PE Triggered time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_postedtoasyncproc__c</fullName>
        <label>HVPE - 3:Async proc post time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_priorseqsydataidtoexec__c</fullName>
        <label>Sequential Execution - Prior Sydata ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_process__c</fullName>
        <inlineHelpText>The &quot;processing&quot; status. New records are to be set to &apos;Ready&apos; or &apos;Hold&apos; (if not to be processed yet). When processed successfully, will be set to &apos;Processing Complete&apos;. Other values are 

Validation Failure 
Processing Failure 
Batch Processing Failur</inlineHelpText>
        <label>Processing Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Validation Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Failure</fullName>
                </value>
                <value>
                    <fullName>Batch Processing Failure</fullName>
                </value>
                <value>
                    <fullName>ProcessingComplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_processid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by system - the Record ID of the Process Log entry recorded for this transaction.</inlineHelpText>
        <label>Process ID</label>
        <referenceTo>rstk__processlog__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_recordid__c</fullName>
        <inlineHelpText>A system-assigned unique ID for this record.</inlineHelpText>
        <label>Unique Record Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_resubmitsyncsydatatohvpe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The flag indicates that the sydata originally submitted in sync mode has been resubmitted to be processed async via HVPE</inlineHelpText>
        <label>Resubmit Sync Sydata to HVPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_seqexecbatchno__c</fullName>
        <label>Sequential Execution - Batch No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_sourcepgm__c</fullName>
        <inlineHelpText>The program or method used that generated this SYDATAT transaction.</inlineHelpText>
        <label>Source Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_srlnos__c</fullName>
        <inlineHelpText>When transferring serial-controlled items, these are the serial numbers being transferred.</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Division in which the given transfer transaction is performed.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sydivsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Manufacturing User that created this record. Defaults to the login user (unless created by PeriodicBatchProcessor, which then needs to have proper permissions, licenses, etc.).</inlineHelpText>
        <label>Created By User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_threadno__c</fullName>
        <label>HVPE - Thread No</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toavailind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The &quot;Available for Picking Indicator&quot; as set on the To Location ID record specified.</inlineHelpText>
        <label>To Available for Picking Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_todiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Transaction ID = INVDIVDIV (Division to Division Transfer), this is the Inventory Division being transferred to.</inlineHelpText>
        <label>To Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>todivsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Item being transferred</inlineHelpText>
        <label>To Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>toicitemsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toiclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Location ID being transferred to, which can be used as an alternative to specifying the To Loc ID/To Loc No, used when there is an existing Inventory location being transferred to.</inlineHelpText>
        <label>To Inventory Item Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipName>tosydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toloccomment__c</fullName>
        <inlineHelpText>When set, the value entered will be written to the Inventory Location record being transferred to.</inlineHelpText>
        <label>To Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Location ID that inventory is being transferred to.</inlineHelpText>
        <label>To Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>tolocidsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tolocnum__c</fullName>
        <inlineHelpText>The Inventory Location Number that inventory is being transferred to.  If the Site in which the inventory exists requires pre-defined Location Numbers, must be a valid Location Number for the To Location ID being transferred to.</inlineHelpText>
        <label>To Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toloctype__c</fullName>
        <inlineHelpText>The Location Type of the To Location ID, and is set by the system.</inlineHelpText>
        <label>To Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_topjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Project Charge Code</description>
        <inlineHelpText>To Project Charge Code</inlineHelpText>
        <label>To Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>sydatats (To Project Charge Code)</relationshipLabel>
        <relationshipName>topjprojwbssydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project Number the inventory is being transferred to.  If the Transaction ID = INVPROJPROJ (Project to Project Transfer), this field is required.</inlineHelpText>
        <label>To Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>toprojsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tosite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Transaction ID = INVSITESITE (Site to Site Transfer), this is the Inventory Site being transferred to.</inlineHelpText>
        <label>To Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>tositesydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txncomment__c</fullName>
        <inlineHelpText>When set, comments will be written to the Inventory Cost Transaction generated.</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txndate__c</fullName>
        <inlineHelpText>The Date/Time that this record was created</inlineHelpText>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txndetails__c</fullName>
        <label>Txn Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnexecended__c</fullName>
        <label>HVPE - 5:Txn exec ended time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnexecstarted__c</fullName>
        <label>HVPE - 4:Txn exec started time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnid__c</fullName>
        <inlineHelpText>Set to the appropriate transfer-type transaction being performed.  Options are

INVDIVDIV (Division to Division)
INVSITESITE (Site to Site)
INVPROJPROJ (Project to Project)
INVLOCLOC (Location to Location)</inlineHelpText>
        <label>Transaction Id</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INVDIVDIV</fullName>
                </value>
                <value>
                    <fullName>INVSITESITE</fullName>
                </value>
                <value>
                    <fullName>INVPROJPROJ</fullName>
                </value>
                <value>
                    <fullName>INVLOCLOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The quantity to be transferred.</inlineHelpText>
        <label>Transaction Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txntype__c</fullName>
        <inlineHelpText>Set to &quot;Inventory Transfer&quot;.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Item Change of Serial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SYDATA Transfer Object</label>
    <listViews>
        <fullName>MS_sydatat_details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromproj__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_islot__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>MS_sydatat details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__R_sydatat_details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromproj__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_islot__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sydata_txnid__c</field>
            <operation>equals</operation>
            <value>INVDIVDIV</value>
        </filters>
        <label>RS sydatat details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Sydatat_details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromproj__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_islot__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYDATAT Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__sydata_details</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txndate__c</columns>
        <columns>rstk__sydata_message__c</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromproj__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_islot__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_ictransreq__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sydata_sydiv__c</field>
            <operation>equals</operation>
            <value>Average Cost Project (AV-P)</value>
        </filters>
        <filters>
            <field>rstk__sydata_icitem__c</field>
            <operation>startsWith</operation>
            <value>G-</value>
        </filters>
        <label>sydata details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sydatats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>